# sCrapper

./: .gitignore  CMakeLists.txt  Compile C  README.md  compileur.sh  executable  main.c
File/: home.html  home.txt
Headers/: confParser.h  confTask.h
downloads/: home.html  home.txt  stackoverflow.com.html  tmp.html
downloads/developers.google.com/ad-manager/api/: rel_notes#whats-new_1.html
headers/: confAction.h  confListArgStruc.h  confListLinks.h  confParser.h  confTask.h  curlFunctions.h  main.h  scrapper.h  scrapping.h  types.h
resources/: conf.sconf  conf.xcconfig
sCrapper.xcodeproj/: project.pbxproj
sCrapper.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sCrapper.xcodeproj/project.xcworkspace/xcuserdata/cpiquet.xcuserdatad/: UserInterfaceState.xcuserstate
sCrapper.xcodeproj/xcshareddata/xcschemes/: sCrapper.xcscheme
sCrapper.xcodeproj/xcuserdata/cpiquet.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sCrapper.xcodeproj/xcuserdata/cpiquet.xcuserdatad/xcschemes/: xcschememanagement.plist
sCrapper/downloads/developers.google.com/ad-manager/api/: rel_notes#whats-new_1.html
sCrapper/headers/: confAction.h  confTask.h  scrapper.h  scrapping.h  types.h  urlParser.h
sCrapper/resources/: conf.sconf
sCrapper/sources/: confAction.c  confParser.c  confTask.c  main.c  scrapping.c  urlParser.c
sources/: Links.c  ListLinks.c  confAction.c  confListArgStruct.c  confListLinks.c  confParser.c  confTask.c  curlFunctions.c  main.c  scrapping.c  types.c
(+1 files in other folders)
