cmake_minimum_required(VERSION 3.13)
project(cmake_scrapper)
set(CMAKE_CXX_STANDARD 14)
add_executable(cmake_scrapper sources/main.c sources/confAction.c sources/confListLinks.c sources/confParser.c sources/confTask.c sources/curlFunctions.c sources/scrapping.c sources/types.c )
set(CURL_LIBRARY "-lcurl")
find_package(CURL)
if (CURL_FOUND)
    include_directories(${CURL_INCLUDE_DIRS})
    target_link_libraries(cmake_scrapper ${CURL_LIBRARIES})
else()
    MESSAGE(FATAL_ERROR "LibCurl is not found in your system.")
endif (CURL_FOUND)